--- a/swh-eng/freedict_mapping.json
+++ b/swh-eng/freedict_mapping.json
@@ -2,7 +2,7 @@
    "mappings": {
       "_meta": {
          "_xpaths": {
-            "id": "./@id",
+            "id": "./@xml:id",
             "root": "//tei:entry",
             "fields": {
                "[lemma]": "./tei:form/tei:orth",
